@@ -1,3 +1,7 @@
+2007-09-14  Dmitry Dulepov  <dmitry@typo3.org>
+
+ * Autoconfiguration now sets 'autoUpdatePathCache' instead of 'firstHitPathCache'
+
 2007-09-12  Dmitry Dulepov  <dmitry@typo3.org>
 
  * Fixed bug 2402: RealURL+tx_realurl_advanced: xxx was not a keyword for a postVarSet
